--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <script src="./js/fizz-buzz.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Puppeteer Mocha Scaffold</title>
+    <title>The FizzBuzz Challenge</title>
 </head>
 <body>
+
+        <br><br> <h1>The FizzBuzz Challenge</h1> <br> <br>
     <!-- Place your content here -->
     <div>
         <input type="text" id="value">
-        <input type="submit" value="Check" id="button">
+        <input type="submit" value="Check" id="button"> 
         <div id="display_answer"></div>
 
 
