--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
+<script src="./src/js/fizz_buzz.js"></script>
+<script src="./src/js/main.js"></script>
         <br><br> <h1>The FizzBuzz Challenge</h1> <br> <br>
 
         <img src="img/ghost.jpg" alt="Image unavaliable" srcset=""> <br> <br>
